--- a/final/refs.bib
+++ b/final/refs.bib
@@ -469,6 +469,13 @@
   url    = {{\url{https://github.com/containerd/containerd/blob/main/docs/getting-started.md}. [Accessed: \today]}}
 }
 
+@misc{d:gcp,
+  author = {},
+  title  = {Container scanning overview},
+  note   = {\textit{cloud.google.com}},
+  url    = {{\url{https://cloud.google.com/artifact-analysis/docs/container-scanning-overview}. [Accessed: \today]}}
+}
+
 @misc{d:implementations,
   author = {},
   title  = {{opencontainers/runtime-spec — Implementations}},
@@ -560,6 +567,13 @@
   url    = {{\url{https://github.com/docker/docker-bench-security}. [Accessed: \today]}}
 }
 
+@misc{gh:grype,
+  author = {},
+  title  = {anchore/grype},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/anchore/grype}. [Accessed: \today]}}
+}
+
 @misc{gh:gvisor,
   author = {},
   title  = {google/gvisor},
@@ -593,6 +607,13 @@
   title  = {nabla-containers/runnc},
   note   = {\textit{github.com}},
   url    = {{\url{https://github.com/nabla-containers/runnc}. [Accessed: \today]}}
+}
+
+@misc{gh:snyk,
+  author = {},
+  title  = {snyk/cli},
+  note   = {\textit{github.com}},
+  url    = {{\url{https://github.com/snyk/cli}. [Accessed: \today]}}
 }
 
 @article{ieee:1,
@@ -732,6 +753,13 @@
   title  = {{Industry's First Dynamic Analysis of 4 million Publicly Available Docker Hub Container Images}},
   note   = {\textit{prevasio.io}, Dec. 1, 2020},
   url    = {{\url{https://uploads-ssl.webflow.com/609ccd86b14ba6e17f9fbce4/643ba6fc599bb82bfdea2456_Red_Kangaroo.pdf}. [Accessed: \today]}}
+}
+
+@misc{s:anchore,
+  author = {},
+  title  = {{Anchore Unveils New Open Source Tools For Automated DevSecOps Pipeline Security}},
+  note   = {\textit{prnewswire.com}, Oct. 06, 2020},
+  url    = {{\url{https://www.prnewswire.com/news-releases/anchore-unveils-new-open-source-tools-for-automated-devsecops-pipeline-security-301145501.html}. [Accessed: \today]}}
 }
 
 @misc{s:clair-intro2,
