--- a/final/pages/macros.tex
+++ b/final/pages/macros.tex
@@ -1,17 +1,12 @@
-% Список пользовательских команд 
-
-%%%%%%%%%%%% \image %%%%%%%%%%%%%%%%%%
-
 % \image {Имя изображения.расширение}{Подпись к рисунку}{Скейл Изображения}
 
-\newcommand{\image}[3]{
+\newcommand{\image}[4]{
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=#3\textwidth]{#1}
+	\includegraphics[width=#4\textwidth]{#1}
 	\caption{#2}
+    \label{#3}
 \end{figure}
 }
 
-\def\figurename{Рисунок}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\def\figurename{Figure}
