--- a/final/settings/format.tex
+++ b/final/settings/format.tex
@@ -18,7 +18,7 @@
 
 \setlength{\parindent}{1.25cm} % отступ для абзаца
 
-\graphicspath{{assets}} % Путь до папки с изображениями
+\graphicspath{{assets/images}} % Путь до папки с изображениями
 
 % Внесение titlepage в учёт счётчика страниц
 \makeatletter
